# pR-t-04

./: .gitignore  README.md
audio-chat-app/: README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js
audio-chat-app/src/: App.tsx  index.css
audio-chat-app/src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
audio-chat-app/src-tauri/src/: asr.rs  audio_processing.rs  db.rs  main.rs  microphone.rs  ollama.rs  tts.rs
audio-chat-app/src/components/: HistorySidebar.tsx  MicrophonePermissionModal.tsx  StatusBar.tsx  VoiceChat.tsx  Waveform.tsx
