[package]
name = "audio-chat-app"
version = "0.1.0"
description = "Audio-only conversation app with push-to-talk for macOS"
authors = ["you"]
license = "MIT"
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["macos-private-api"] }
tauri-plugin-shell = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
rusqlite = { version = "0.32", features = ["bundled"] }
anyhow = "1.0"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
cpal = "0.15"
whisper-rs = "0.12"
hound = "3.5"
tempfile = "3.8"
pyo3 = { version = "0.22", features = ["auto-initialize"] }
rubato = "0.15"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
